# PayFlow

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml  pages.yml
agent/: annotations.py  budget.py  config.py  golden.py  graph.mmd  graph.py  llm.py  observability.py  roles.py  runner.py  schemas.py  state.py
agent/codegen/: render.py  render_mr.py
agent/nodes/: compile_spec.py  execute.py  infer_endpoint_rules.py  infer_invariants.py  infer_relations.py  ingest_spec.py  refine.py  report.py  triage.py
docs/: design.md
docs/adr/: 0001-foundational-decisions.md  0002-verifier-family-and-local-langwatch.md  0003-mutation-thresholds.md  0004-judge-selection-policy.md  0005-fee-from-settlement.md  0006-refine-budget-five.md  0007-semantic-mutation-explorer.md  0008-baseline-ratchet-and-path-relocations.md
generated_specs/: accepted_proposals.json  payflow_mr.py  payflow_spec.py
langwatch/: .env.example  compose.yml
mutation/: README.md  baseline.json  baseline.txt  run_baseline.py  semantic_report.json  spec_coverage.json  survivors.txt
mutation/replay/: conftest.py  test_agent_replay.py  test_full_suite.py
mutation/semantic/: __init__.py  equivalence.py  explorer.py
payflow/: __init__.py  config.py
payflow/api/: __init__.py  app.py  routes.py  schemas.py
payflow/domain/: __init__.py  errors.py  factory.py  fees.py  idempotency.py  models.py  ports.py  repositories.py  seams.py  service.py  state_machine.py
payflow/infrastructure/: __init__.py  accounts.py  db.py  idempotency.py  intents.py
payflow/infrastructure/ledger/: __init__.py  core.py  tables.py
site/: index.html
specs/: README.md  api.md  constraints.md  domain.md  invariants.md  state-machine.md
tests/: _layer2.py  conftest.py  helpers.py
tests/agent_metamorphic/: fixtures.py  test_agent_metamorphic.py  transforms.py
tests/agent_scenarios/: _over_capture_probe.py  _overly_strict_invariant_spec.py  _rigged.py  test_agent_scenarios.py
tests/concurrency/: test_idempotent_replay.py
tests/drift/: importlinter_contracts.snapshot  test_agent_graph_diagram.py  test_importlinter_contracts.py  test_node_roles.py  test_public_numbers.py  test_spec_coverage.py  test_state_machine_diagram.py  test_vocabulary_coupling.py  test_workflow_scripts.py
tests/property/: test_sanity_machine.py
tests/semantic/: test_equivalence.py  test_explorer.py
tools/: catch.py  demo.py  explain_run.py  full.py  judge_comparison.py  labels.py  layer2_validation.py  mr_validation.py  run_view.py  showcase.py  triage_validation.py  trust_report.py
tools/seeded_bugs/: activate_fm_b.sh  deactivate_fm_b.sh  fm_b_admin.py
